<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Total amount</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">Add</string>
    <string name="summary">Sum</string>
    <string name="del">del</string>
    <string name="allClear">All clear</string>
    <string name="unit">dol</string>
    <string name="amount">amount</string>
    <string name="no">No</string>
    <string name="save">save</string>
    <string name="open">open</string>
    <string name="select_file">Please select a file</string>
    <string name="saveFile">save</string>
    <string name="openFile">open</string>
    <string name="has_been_saved">Has been saved</string>
    <string name="failed_to_save">failed to save</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
    <string name="file">file</string>
    <string name="delete_confirmation">Are you sure you want to delete?</string>
    <string name="opend_file">opened the file.</string>
    <string name="file_open_error">file open error!</string>
    <string name="please_memo">please enter the memo(optional)</string>
</resources>